--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,5 +1,7 @@
-busLocationUri: "https://services.saucontds.com/tds-map/nyw/nywvehiclePositions.do"
-mapTranslationUri: "https://services.saucontds.com/tds-map/nyw/nywmapTranslation.do"
+nyWaterwayBusLocationUri: "https://services.saucontds.com/tds-map/nyw/nywvehiclePositions.do"
+nyWaterwayBusMapTranslationUri: "https://services.saucontds.com/tds-map/nyw/nywmapTranslation.do"
+njTransitBusLocationUrlTemplate: "http://mybusnow.njtransit.com/bustime/map/getBusesForRoute.jsp?route={route}"
+njTransitBusRouteUrlTemplate: "http://mybusnow.njtransit.com/bustime/map/getRoutePoints.jsp?route={route}"
 
 # array of BusRoute
 busRoutes:
